Setup for 10/17/2025 discussion

--- a/section-3-snowshoe-hares.ipynb
+++ b/section-3-snowshoe-hares.ipynb
@@ -1,9 +1,360 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e4f02a3e-295a-4dbd-a1a2-3ddf19ba7c2c",
+   "metadata": {},
+   "source": [
+    "# Snowshoe hare physical data in Bonanza Creek Experimental Forest: 1999-Present\n",
+    "\n",
+    "Citation for publication:\n",
+    "\n",
+    "Kielland, K., F.S. Chapin, R.W. Ruess, and Bonanza Creek LTER. 2017. Snowshoe hare physical data in Bonanza Creek Experimental Forest: 1999-Present ver 22. Environmental Data Initiative. https://doi.org/10.6073/pasta/03dce4856d79b91557d8e6ce2cbcdc14 (Accessed 2025-10-17).\n",
+    "\n",
+    "## Data Description\n",
+    "Using capture-recapture studies of snowshoe hares to study population dynamics from 1999-2017\n",
+    "\n",
+    "Date of access: 10/16/2025\n",
+    "\n",
+    "archive: https://edirepository.org/\n",
+    "\n",
+    "![image description](https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/SNOWSHOE_HARE_%28Lepus_americanus%29_%285-28-2015%29_quoddy_head%2C_washington_co%2C_maine_-01_%2818988734889%29.jpg/1089px-SNOWSHOE_HARE_%28Lepus_americanus%29_%285-28-2015%29_quoddy_head%2C_washington_co%2C_maine_-01_%2818988734889%29.jpg?20170313021652)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "85e1727b-a6b7-46a5-8d97-61db7ac06201",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bfd0b856-97ef-4c83-b1dd-e0a44f123234",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>grid</th>\n",
+       "      <th>trap</th>\n",
+       "      <th>l_ear</th>\n",
+       "      <th>r_ear</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>hindft</th>\n",
+       "      <th>notes</th>\n",
+       "      <th>b_key</th>\n",
+       "      <th>session_id</th>\n",
+       "      <th>study</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11/26/1998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>1A</td>\n",
+       "      <td>414D096A08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1370.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>917.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Population</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11/26/1998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>2C</td>\n",
+       "      <td>414D320671</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1430.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>936.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Population</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11/26/1998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>2D</td>\n",
+       "      <td>414D103E3A</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1430.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>921.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Population</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11/26/1998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>2E</td>\n",
+       "      <td>414D262D43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1490.0</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>931.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Population</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11/26/1998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>bonrip</td>\n",
+       "      <td>3B</td>\n",
+       "      <td>414D2B4B58</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1710.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>933.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Population</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date time    grid trap       l_ear r_ear  sex  age  weight  hindft  \\\n",
+       "0  11/26/1998  NaN  bonrip   1A  414D096A08   NaN  NaN  NaN  1370.0   160.0   \n",
+       "1  11/26/1998  NaN  bonrip   2C  414D320671   NaN    M  NaN  1430.0     NaN   \n",
+       "2  11/26/1998  NaN  bonrip   2D  414D103E3A   NaN    M  NaN  1430.0     NaN   \n",
+       "3  11/26/1998  NaN  bonrip   2E  414D262D43   NaN  NaN  NaN  1490.0   135.0   \n",
+       "4  11/26/1998  NaN  bonrip   3B  414D2B4B58   NaN  NaN  NaN  1710.0   150.0   \n",
+       "\n",
+       "  notes  b_key  session_id       study  \n",
+       "0   NaN  917.0          51  Population  \n",
+       "1   NaN  936.0          51  Population  \n",
+       "2   NaN  921.0          51  Population  \n",
+       "3   NaN  931.0          51  Population  \n",
+       "4   NaN  933.0          51  Population  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hares = pd.read_csv(\"data/55_Hare_Data_2012.txt\")\n",
+    "hares.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c1ae35a0-03d3-491a-bfd1-f6b510a3dea9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date           object\n",
+       "time           object\n",
+       "grid           object\n",
+       "trap           object\n",
+       "l_ear          object\n",
+       "r_ear          object\n",
+       "sex            object\n",
+       "age            object\n",
+       "weight        float64\n",
+       "hindft        float64\n",
+       "notes          object\n",
+       "b_key         float64\n",
+       "session_id      int64\n",
+       "study          object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hares.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "08d865c8-d7df-42a8-8205-b8cf85fb63fc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['date', 'time', 'grid', 'trap', 'l_ear', 'r_ear', 'sex', 'age',\n",
+       "       'weight', 'hindft', 'notes', 'b_key', 'session_id', 'study'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hares.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "903df6c4-9c9f-4abe-ae66-a789e29184a0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3380, 14)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hares.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f0e929db-e674-462f-99e0-19a8a4ffeb5e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Series.unique of 0        1A\n",
+       "1        2C\n",
+       "2        2D\n",
+       "3        2E\n",
+       "4        3B\n",
+       "       ... \n",
+       "3375    1b \n",
+       "3376    4b \n",
+       "3377     4b\n",
+       "3378     6d\n",
+       "3379     4b\n",
+       "Name: trap, Length: 3380, dtype: object>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hares.trap.unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2b39563d-dbd8-4b15-bcbf-0daf7b575314",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date             0\n",
+       "time          3116\n",
+       "grid             0\n",
+       "trap            12\n",
+       "l_ear           48\n",
+       "r_ear          169\n",
+       "sex            352\n",
+       "age           2111\n",
+       "weight         535\n",
+       "hindft        1747\n",
+       "notes         3137\n",
+       "b_key           47\n",
+       "session_id       0\n",
+       "study          163\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hares.isna().sum()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "270f5092-ffc4-4952-bc0a-1ffa6a7e6e44",
+   "id": "9d58b654-5ddb-4e17-907f-263a207f910e",
    "metadata": {},
    "outputs": [],
    "source": []
